# tietoa-slack-notifications

./: pyproject.toml  railway.json
tietoa-slack-notifications/: config.py  main.py  models.py
